--- a/beerAPI/main.html
+++ b/beerAPI/main.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <style>
+        *{
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
         #navBar {
             height: 50px;
             display: flex;
@@ -19,7 +22,6 @@
         #navBar>div {
             margin: auto;
             font-size: 20px;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
         }
 
@@ -60,19 +62,19 @@
     <table>
         <thead>
             <td>
-                <b>name</b>
+                <b>Name</b>
             </td>
             <td>
-                <b>brewery_type</b>
+                <b>Brewery_type</b>
             </td>
             <td>
-                <b>city</b>
+                <b>City</b>
             </td>
             <td>
-                <b>state</b>
+                <b>State</b>
             </td>
             <td>
-                <b>select</b>
+                <b>More Details</b>
             </td>
 
         </thead>
